# automata

./: .gitignore  Alphabet.cpp  Alphabet.h  Automata.cpp  Automata.h  CDFA.cpp  CDFA.hpp  CMakeLists.txt  CState.hpp  DFA.cpp  DFA.h  File.hpp  GNFA.cpp  GNFA.h  NDFA.cpp  NDFA.h  NDFAFactory.cpp  NDFAFactory.h  README.md  Regex.cpp  Regex.h  State.hpp  SubtractOneAfter.hpp  main.cpp
MyStructures/: Algorithm.hpp
MyStructures/BitSubset/: BitSubset.cpp  BitSubset.h
MyStructures/Bitset/: Bitset.cpp  Bitset.h
MyStructures/OrderedSet/: OrderedSet.hpp
MyStructures/Set/: Set.hpp
MyStructures/String/: String.cpp  String.h
MyStructures/StringView/: StringView.cpp  StringView.h
MyStructures/Subset/: Subset.cpp  Subset.h
MyStructures/Vector/: Vector.hpp
cli/: Command.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  UI.cpp  UI.h
include/: Automata.h  DFA.h  GNFA.h  NDFA.h  NDFAFactory.h  Regex.h
include/helpers/: File.hpp  SubtractOneAfter.hpp
src/: Automata.cpp  DFA.cpp  GNFA.cpp  NDFA.cpp  NDFAFactory.cpp  Regex.cpp
tests/: test.h
